feat(kit): support primitives (RawJs, Markdown, ArrayRecord, ChunkIterator) + OKLCH shade theming
#361 support utility primitives; #365 shade-level color customization (OKLCH
palette generation, single-shade override, CSS custom-property emission).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>